# portfolio_spa

./: .gitignore  CHANGELOG.md  LICENSE  README.rst  pyproject.toml
spa/: __init__.py  _acquire_version.py  app.py
spa/static/: about.txt
spa/templates/: about.html  base.html  cover_letter.html  resume.html
tests/: __init__.py
